--- a/style.css
+++ b/style.css
@@ -483,20 +483,27 @@ section {
   font-size: 16px;
 }
 
-@media (max-width: 1285px){
+@media (max-width: 400px){
   #menu-icon{
     display: block;
+  }
+  .header{
+  position: absolute;
+  width: 95%;
+  }
+  .logo {
+    font-size: 20px;
   }
   .navbar{
     position: absolute;
     top:100%;
     right: 0;
-    width: 50%;
+    width: 60%;
     padding: 1rem 3rem;
     background: rgba(0, 0, 0, 0.8);
     border-bottom-left-radius: 2rem;
     border-left: 2px solid var(--main-color);
-    border-bottom: 2pz solid var(--main-color);
+    border-bottom: 2px solid var(--main-color);
     display: none;
   }
   .navbar a{
@@ -520,6 +527,12 @@ section {
     align-items: center;
     text-align: center;
   }
+  .home-content h1 {
+    font-size: 5rem;
+  }
+  .home-content h3 {
+    font-size: 2.5rem;
+  }
   .home-img img {
     width: 56vw;
   }
@@ -539,6 +552,72 @@ section {
   }
   .about ul {
     justify-content: center;
+  }
+  .heading {
+  text-align: center;
+  font-size: 3.8rem;
+  margin: 2rem 0;
+  }
+  .mySwiper {
+  max-width: 350px;
+  width: 100%;
+  }
+  .swiper-container {
+    margin: 0 10px;
+    overflow: hidden;
+    padding-bottom: 30px;
+  }
+  .swiper-slide {
+    width: 340px;
+    height: 250px;
+  }
+  .box {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .box img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
+  .swiper-pagination-bullet {
+    background:#fff;
+    width: 9px;
+    height: 9px;
+  }
+  .heading-pj {
+    text-align: center;
+    font-size: 6rem;
+    margin: 7.5rem 0;
+  }
+  .projects {
+    padding: 2rem;
+  }
+  .projects-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    justify-items: center;
+    gap: 3rem;
+    row-gap: 5rem;
+  }
+  .projects-card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 3rem;
+    gap: 2rem;
+    padding: 5rem 2rem;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 0 5px var(--main-color);
+    transition: 0.3s ease;
   }
   .contact-form {
     flex-direction: column;
